Updated panels spacing, fixed some styling heirarchy and added colors to favs

--- a/app/assets/stylesheets/juices.css.scss
+++ b/app/assets/stylesheets/juices.css.scss
@@ -11,14 +11,11 @@
 	background-repeat: none;
 	margin-right: 1em;
 	float: left;
-	// img {
-	// 	display: table-cell;
-	// 	height: 150px;
-	// 	width: auto;
-	// 	vertical-align: middle;
-	// }
 }
 h1 {
 	font-weight: 800;
 	margin: .02em;
+}
+.fa-heart, .fa-heart-o {
+	color: #F53D54;
 }
